--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-
     <!--estilo CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -253,7 +252,7 @@
         </div>
         <div class="row align-middle">
             <div class="col-3">
-                <i class="fab fa-github-square fa-3x text-white"></i>              
+                <a href="https://github.com/lorenave?tab=repositories"></a><i class="fab fa-github-square fa-3x text-white"></i></a>              
             </div>
               <div class="col-3">
                 <i class="fab fa-linkedin fa-3x text-white"></i>
