--- a/index.html
+++ b/index.html
@@ -245,26 +245,18 @@
 
     <!--footer-->
     <footer class="container-fluid mt-5 py-5 color-portafolio">
-        <div class="container my-2 text-center">
-        <div class="row">
-        <div class="col-6">
-            <h1 class="lorena-footer text-white text-center">Lorena Verdugo</h1>
-        </div>
-        <div class="row align-middle">
-            <div class="col-3">
-                <a href="https://github.com/lorenave?tab=repositories"></a><i class="fab fa-github-square fa-3x text-white"></i></a>              
+        <div class="container my-2">
+            <div class="row">
+                <div class="col-6 mx-auto">
+                    <h1 class="lorena-footer text-white text-center">Lorena Verdugo</h1>
+                </div>
+                <div class="row mx-auto">
+                    <a href="https://github.com"><i class="fab fa-github-square fa-3x text-white"></i></a>
+                    <a href="https://linkedin.com"><i class="fab fa-linkedin fa-3x text-white"></i></a>
+                    <a href="https://twitter.com"><i class="fab fa-twitter-square fa-3x text-white"></i></a>
+                    <a href="https://facebook.com"><i class="fab fa-facebook-square fa-3x text-white"></i></a>
+                </div>
             </div>
-              <div class="col-3">
-                <i class="fab fa-linkedin fa-3x text-white"></i>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-twitter-square fa-3x text-white"></i>
-              </div>
-              <div class="col-3">
-                <i class="fab fa-facebook-square fa-3x text-white"></i>
-              </div>
-        </div>
-    </div>
     </footer>
 
 
