--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 
     <!--sobre mi-->
     <div id="about" class="container py-4 d-none d-sm-none d-md-block">
-        <h3 class="sobre-mi pt-5 text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis ante
-            nulla. Donec in neque consectetur, ultrices justo eu, hendrerit lectus.</h3>
+        <h3 class="sobre-mi pt-5 text-center">Hola a tod@s! En este espacio presento algunos de mis últimos trabajos web desarrollados. Sean bienvenidos :)</h3>
         <div class="linea"></div>
         <div class="row m-0 py-5">
             <div class="col-6">
@@ -154,9 +153,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-1.jpg" alt="meet-coffee">
                         <div class="card-body">
-                            <p class="card-text">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
-                                scelerisque semper fusce turpis cubilia cursus a taciti, ligula in at sociis accumsan
-                                donec ridiculus.</p>
+                            <p class="card-text">Meet&Coffee revoluciona la forma en que las personas y las empresas trabajan, otorgando espacios de trabajo flexibles.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#meet-coffee">Ver
@@ -167,9 +164,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-2.jpg" alt="iguanas">
                         <div class="card-body">
-                            <p class="card-text">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
-                                scelerisque semper fusce turpis cubilia cursus a taciti, ligula in at sociis accumsan
-                                donec ridiculus.</p>
+                            <p class="card-text">Iguana corresponde a un sitio web informativo especializado en el cuidado y conservación de las Iguanas de Centroamérica.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#iguanas">Ver
@@ -180,9 +175,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-3.jpg" alt="suricata">
                         <div class="card-body">
-                            <p class="card-text">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
-                                scelerisque semper fusce turpis cubilia cursus a taciti, ligula in at sociis accumsan
-                                donec ridiculus.</p>
+                            <p class="card-text">Suricata permite planificar tu semana con una variedad de platos, disfruta en las puertas de tu hogar de comida 100% casera.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#suricata">Ver
@@ -195,9 +188,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-4.jpg" alt="cuppon">
                         <div class="card-body">
-                            <p class="card-text">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
-                                scelerisque semper fusce turpis cubilia cursus a taciti, ligula in at sociis accumsan
-                                donec ridiculus.</p>
+                            <p class="card-text">Cuppon es un sitio web internacional de ofertas del día que presenta cupones de descuentos utilizables en compañías a nivel local y nacional. </p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#cuppon">Ver
                                     más</button>
@@ -207,9 +198,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-5.jpg" alt="ricomida">
                         <div class="card-body">
-                            <p class="card-text">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
-                                scelerisque semper fusce turpis cubilia cursus a taciti, ligula in at sociis accumsan
-                                donec ridiculus.</p>
+                            <p class="card-text">Ricomida es un sitio que te permite disfrutar de tu comida favorita desde la comodidad de tu casa. La comida que quieres, en cualquier momento.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#ricomida">Ver
@@ -220,9 +209,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-6.jpg" alt="tu-marca">
                         <div class="card-body">
-                            <p class="card-text">Felis tincidunt vel risus lacus posuere dignissim habitasse sapien,
-                                scelerisque semper fusce turpis cubilia cursus a taciti, ligula in at sociis accumsan
-                                donec ridiculus.</p>
+                            <p class="card-text">Tu Marca es un servicio de inteligencia competitiva líder para los expertos en SEO, PPC y SMM. Reconocido como Best SEO Suite 2020.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#tu-marca">Ver
