--- a/index.html
+++ b/index.html
@@ -53,11 +53,18 @@
         </div>
     </nav>
 
-
+    <header class="hero text-white text-center pt-5 mt-5">
+        <div class="container titular align-bottom">
+            <h1 class="display-1 text-uppercase font-weight-light m-0">yo soy</h1>
+            <div class="linea-header"></div>
+            <h1 class="display-1 text-uppercase pb-5 font-weight-bold">Lorena</h1>
+        </div>
+    </header>
 
     <!--sobre mi-->
     <div id="about" class="container py-4 d-none d-sm-none d-md-block">
-        <h3 class="sobre-mi pt-5 text-center">Hola a tod@s! En este espacio presento algunos de mis últimos trabajos web desarrollados. Sean bienvenidos :)</h3>
+        <h3 class="sobre-mi pt-5 text-center">Hola a tod@s! En este espacio presento algunos de mis últimos trabajos web
+            desarrollados. Sean bienvenidos :)</h3>
         <div class="linea"></div>
         <div class="row m-0 py-5">
             <div class="col-6">
@@ -147,7 +154,8 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-1.jpg" alt="meet-coffee">
                         <div class="card-body">
-                            <p class="card-text">Meet&Coffee revoluciona la forma en que las personas y las empresas trabajan, otorgando espacios de trabajo flexibles.</p>
+                            <p class="card-text">Meet&Coffee revoluciona la forma en que las personas y las empresas
+                                trabajan, otorgando espacios de trabajo flexibles.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#meet-coffee">Ver
@@ -158,7 +166,8 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-2.jpg" alt="iguanas">
                         <div class="card-body">
-                            <p class="card-text">Iguana corresponde a un sitio web informativo especializado en el cuidado y conservación de las Iguanas de Centroamérica.</p>
+                            <p class="card-text">Iguana corresponde a un sitio web informativo especializado en el
+                                cuidado y conservación de las Iguanas de Centroamérica.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#iguanas">Ver
@@ -169,7 +178,8 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-3.jpg" alt="suricata">
                         <div class="card-body">
-                            <p class="card-text">Suricata permite planificar tu semana con una variedad de platos, disfruta en las puertas de tu hogar de comida 100% casera.</p>
+                            <p class="card-text">Suricata permite planificar tu semana con una variedad de platos,
+                                disfruta en las puertas de tu hogar de comida 100% casera.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#suricata">Ver
@@ -182,7 +192,8 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-4.jpg" alt="cuppon">
                         <div class="card-body">
-                            <p class="card-text">Cuppon es un sitio web internacional de ofertas del día que presenta cupones de descuentos utilizables en compañías a nivel local y nacional. </p>
+                            <p class="card-text">Cuppon es un sitio web internacional de ofertas del día que presenta
+                                cupones de descuentos utilizables en compañías a nivel local y nacional. </p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#cuppon">Ver
                                     más</button>
@@ -192,7 +203,8 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-5.jpg" alt="ricomida">
                         <div class="card-body">
-                            <p class="card-text">Ricomida es un sitio que te permite disfrutar de tu comida favorita desde la comodidad de tu casa. La comida que quieres, en cualquier momento.</p>
+                            <p class="card-text">Ricomida es un sitio que te permite disfrutar de tu comida favorita
+                                desde la comodidad de tu casa. La comida que quieres, en cualquier momento.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#ricomida">Ver
@@ -203,7 +215,8 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/img/desafio-6.jpg" alt="tu-marca">
                         <div class="card-body">
-                            <p class="card-text">Tu Marca es un servicio de inteligencia competitiva líder para los expertos en SEO, PPC y SMM. Reconocido como Best SEO Suite 2020.</p>
+                            <p class="card-text">Tu Marca es un servicio de inteligencia competitiva líder para los
+                                expertos en SEO, PPC y SMM. Reconocido como Best SEO Suite 2020.</p>
                             <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-dark" data-toggle="modal"
                                     data-target="#tu-marca">Ver
